--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
       "last 1 safari version"
     ]
   },
-  
-  "proxy":"http://192.168.1.4:3000"
-
+  "proxy":"http://192.168.1.4:3000",
+  "devDependencies": {
+    "prettier": "2.6.2"
+  }
 }
